tests/snapshots/eval__string_builtin__string_wrong_arity_two.snap
---
source: tests/eval.rs
expression: "run(r#\"print(string(1, 2))\"#)"
---
Err(
    EvalError {
        category: Type,
        message: "`string` takes 1 argument, got 2",
        span: Span {
            start: 6,
            end: 18,
        },
        cause: None,
    },
)
