tests/snapshots/eval__string_builtin__string_wrong_arity_zero.snap
---
source: tests/eval.rs
expression: "run(r#\"print(string())\"#)"
---
Err(
    EvalError {
        category: Type,
        message: "`string` takes 1 argument, got 0",
        span: Span {
            start: 6,
            end: 14,
        },
        cause: None,
    },
)
